k8s/apps/multimedia/flood/deployment-flood.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flood
  namespace: flood
  labels:
    app.kubernetes.io/name: flood
    app.kubernetes.io/instance: flood
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: flood
      app.kubernetes.io/instance: flood
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flood
        app.kubernetes.io/instance: flood
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: flood
          image: docker.io/jesec/flood:4.13.9
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 512Mi
          securityContext:
            readOnlyRootFilesystem: false # FIXME: Figure out path to "runtime directory" which needs to have write permissions
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: multimedia
              mountPath: /multimedia
            - name: data
              mountPath: /data
      volumes:
        - name: multimedia
          persistentVolumeClaim:
            claimName: multimedia
        - name: data
          persistentVolumeClaim:
            claimName: flood-data
