k8s/apps/multimedia/flood/deployment-transmission.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: flood
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
      app.kubernetes.io/instance: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
        app.kubernetes.io/instance: transmission
    spec:
      tolerations:
        - key: emnt.dev/on-nas
          operator: Exists
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: emnt.dev/on-nas
                    operator: Exists
      hostname: transmission
      securityContext:
        fsGroup: 1000
        runAsNonRoot: false # FIXME: Linuxserver images require root for init
      containers:
        - name: transmission
          image: docker.io/linuxserver/transmission:4.1.1
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 2Gi
          securityContext:
            readOnlyRootFilesystem: false # FIXME: Linuxserver images require writable root fs
          ports:
            - name: http
              containerPort: 9091
          volumeMounts:
            - name: data
              mountPath: /config
            - name: settings
              mountPath: /defaults/settings.json
              subPath: settings.json
            - name: multimedia
              mountPath: /multimedia
            # Attached so that first api call can be done manually
            - name: mam-cookie
              mountPath: /mam-cookie
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: transmission
        - name: settings
          configMap:
            name: transmission-settings
        - name: multimedia
          persistentVolumeClaim:
            claimName: multimedia
        - name: mam-cookie
          persistentVolumeClaim:
            claimName: mam-cookie
        - name: gluetun-config
          secret:
            secretName: gluetun-config
