k8s/apps/multimedia/flood/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: flood
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/instance: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
      app.kubernetes.io/instance: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
        app.kubernetes.io/instance: qbittorrent
    spec:
      tolerations:
        - key: emnt.dev/on-nas
          operator: Exists
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: emnt.dev/on-nas
                    operator: Exists
      hostname: qbittorrent
      securityContext:
        fsGroup: 1000
        runAsNonRoot: false # FIXME: Linuxserver images require root for init
      containers:
        - name: qbittorrent
          image: docker.io/linuxserver/qbittorrent:5.1.4
          volumeMounts:
            - name: qbittorrent-data
              mountPath: /config
            - name: multimedia
              mountPath: /multimedia
      volumes:
        - name: qbittorrent-data
          persistentVolumeClaim:
            claimName: qbittorrent
        - name: multimedia
          persistentVolumeClaim:
            claimName: multimedia
        - name: mam-cookie
          persistentVolumeClaim:
            claimName: mam-cookie
        - name: gluetun-tmp
          emptyDir: {}
