k8s/apps/multimedia/flood/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: flood
  namespace: flood
  labels:
    app.kubernetes.io/name: flood
    app.kubernetes.io/instance: flood
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flood
    app.kubernetes.io/instance: flood
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: flood
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
  ports:
    - name: http
      port: 9091
      targetPort: 9091
      protocol: TCP
