k8s/apps/multimedia/flood/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: flood
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/instance: qbittorrent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/instance: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
