k8s/apps/multimedia/flood/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: flood
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/instance: qbittorrent
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`qbittorrent.${CLUSTER_DOMAIN}`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: qbittorrent
          namespace: flood
          port: http
    - kind: Rule
      match: "Host(`qbittorrent.${CLUSTER_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      services:
        - name: authentik-server
          namespace: authentik
          port: http
