k8s/apps/multimedia/flood/network-policy.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flood
  namespace: flood
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: flood
      app.kubernetes.io/instance: flood
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEntities:
        - cluster
